<resources>
    <string name="app_name">socket_in</string>
    <string name="proj_title">Autonomous Car with Android-Based Control</string>
    <string name="port">Port</string>
    <string name="ip">Raspberry Pi IP</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="TCNJ">TCNJ School of Engineering</string>
    <string name="Forward">Forward</string>
    <string name="Backward">Backward</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="STOP">STOP</string>
</resources>
