<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:lines="2"
        android:maxLines="4"
        android:text="@string/proj_title"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/Blue" />

    <EditText
        android:id="@+id/port"
        android:layout_width="313dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ip"
        android:layout_marginTop="23dp"
        android:autofillHints="@string/port"
        android:hint="@string/port"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="313dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:layout_marginTop="23dp"
        android:autofillHints="@string/ip"
        android:hint="@string/ip"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:text="@string/connect" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:text="@string/disconnect"
        android:textAlignment="center" />

    <Button
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/disconnect"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Forward" />

    <Button
        android:id="@+id/backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stop"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Backward" />

    <Button
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forward"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@id/stop"
        android:layout_toStartOf="@id/stop"
        android:text="@string/Left" />

    <Button
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forward"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@id/stop"
        android:layout_toEndOf="@id/stop"
        android:text="@string/Right" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forward"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:text="@string/STOP" />


</RelativeLayout>